kubernetes/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backendwsock
spec:
  selector:
    matchLabels:
      app: backendwsock
  template:
    metadata:
      labels:
        app: backendwsock
    spec:
      containers:
        - name: backendwsock
          image: ragatzino/backend-archiexemplewsock:1.0.0
          resources:
            limits:
              memory: "200Mi"
              cpu: "300m"
          ports:
            - containerPort: 8000
