kubernetes/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backendwsock
spec:
  selector:
    app: backendwsock
  ports:
    - port: 80
      targetPort: 8000
