kubernetes/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backendwsock
  labels:
    name: backendwsock
spec:
  rules:
    - host: backendclogwsock.kub.sspcloud.fr
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: backendwsock
                port:
                  number: 80
